--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://www.tastingtable.com/img/gallery/new-report-shows-people-prefer-a-pre-covid-restaurant-experience/l-intro-1658944491.jpg);">
+  <div class="container">
+    <h1>Find <strong>the best</strong> restaurants<strong> in your city</strong>!</h1>
+    <p>Register your restaurant free</p>
+    <a class="btn btn-flat" href="#">Register here</a>
+  </div>
+</div>
