--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,3 +5,59 @@
     <a class="btn btn-flat" href="#">Register here</a>
   </div>
 </div>
+
+<div class="container">
+<!--RESTUARANT CARDS-->
+  <div class="row">
+      <% @restaurants.first(3).each do |restaurant| %>
+        <div class="col-4 mt-4 mb-5">
+          <section class="articles">
+            <article>
+            <div class="article-wrapper">
+              <figure>
+                <%= image_tag restaurant.photo %>
+              </figure>
+                <div class="article-body">
+                  <h2><%= restaurant.name %> </h2>
+                  <p>
+                  <%= restaurant.description.truncate(60) %>
+                  </p>
+                <a href="/restaurants/<%=restaurant.id %>" class="read-more">
+                  Read more <span class="sr-only">about this is some title</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </article>
+        </section>
+      </div>
+    <% end %>
+  </div>
+
+<!-- Aqui comienzan las card de foods-->
+    <div class="row">
+      <div id="header">
+          <h1>Restaurant Ya</h1>
+          <p>The best restaurants in the world!</p>
+        </div>
+    <% @foods.first(3).each do |food| %>
+      <div class="col-4">
+        <div class="card">
+          <div class="card-image">
+            <img src="https://images.unsplash.com/photo-1604135307399-86c6ce0aba8e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1374&q=80">
+          </div>
+          <div class="card-text">
+            <p class="card-meal-type">Breakfast/Eggs</p>
+            <h2 class="card-title">Délicieux Bénédicte</h2>
+            <p class="card-body">Eggs Benedict with hollandaise sauce, crispy bacon and an assortment of garden herbs.</p>
+          </div>
+          <div class="card-price">$56</div>
+        </div>
+      </div>
+      <% end %>
+    </div>
+  <!-- Aqui terminan las card de foods-->
+
+</div>
