added avatar functionality to header

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -156,7 +156,7 @@ Generic layout (demo looks)
   margin:0;
   padding:0;
   box-sizing:border-box;
-  font-family:'Playfair Display', serif;
+  // font-family:'Playfair Display', serif;
 }
 body{ background:url(https://images.unsplash.com/photo-1495195129352-aeb325a55b65?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1776&q=80);
   background-size:cover;
@@ -175,13 +175,13 @@ body{ background:url(https://images.unsplash.com/photo-1495195129352-aeb325a55b6
   font-size:1.5rem;
   font-style:italic;
 }
-.container{
+/* .container{
   width:100vw;
   display:flex;
   justify-content:space-around;
   flex-wrap:wrap;
-  padding:40px 20px;
-}
+  padding:40px 20px; } */
+
 .card{
   display:flex;
   flex-direction:column;
@@ -227,9 +227,9 @@ body{ background:url(https://images.unsplash.com/photo-1495195129352-aeb325a55b6
   background-color:#970C0A;
   color:#fff;
   margin-left:auto;
-  font-size:2rem;
+  font-size:1rem;
   display:flex;
   justify-content:center;
   align-items:center;
+  padding: 10px;
 }
-
