--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container bg-light shadow border w-50 mt-5 p-4">
   <div class="row">
     <div class="col">
-      <%= simple_form_for @food do |f| %>
+      <%= simple_form_for [@restaurant, @food] do |f| %>
         <%= f.input :name %>
         <%= f.input :description %>
         <%= f.input :price %>
